<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.1.RELEASE</version>
  </parent>

  <groupId>cern.c2mon.web</groupId>
  <artifactId>c2mon-web-ui</artifactId>
  <version>0.1.25-SNAPSHOT</version>
  <packaging>war</packaging>

  <distributionManagement>
     <repository>
       <id>c2mon-nexus-releases</id>
       <url>${nexus.releases.url}</url>
     </repository>
     <snapshotRepository>
       <id>c2mon-nexus-releases</id>
       <url>${nexus.snapshots.url}</url>
     </snapshotRepository>
  </distributionManagement>

  <properties>
    <image.base>openjdk:11-jdk-slim</image.base>
    <c2mon.webhome>/c2mon-web-ui-${project.version}</c2mon.webhome>
    <explodeDir>${project.build.directory}/exploded/</explodeDir>
    <java.version>8</java.version>
     <com.oracle.version>19.8.0.0</com.oracle.version>
  </properties>

  <scm>
    <url>https://gitlab.cern.ch/c2mon/c2mon-web-ui</url>
    <connection>scm:git:ssh://git@gitlab.cern.ch/c2mon/c2mon-web-ui.git</connection>
    <developerConnection>scm:git:ssh://git@gitlab.cern.ch:7999/c2mon/c2mon-web-ui.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <!-- This is needed to retrieve the C2MON dependencies -->
    <repository>
      <id>cern-nexus</id>
      <name>CERN Central Nexus</name>
      <url>https://nexus.web.cern.ch/nexus/content/groups/public</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- C2MON dependencies -->
    <dependency>
      <groupId>cern.c2mon.client</groupId>
      <artifactId>c2mon-client-core</artifactId>
      <version>1.11.2</version>
    </dependency>
    <dependency>
      <groupId>cern.c2mon.client</groupId>
      <artifactId>c2mon-client-ext-history</artifactId>
      <version>1.11.0</version>
    </dependency>

    <!-- 3rd-party dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-taglibs</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-tomcat</artifactId>
         <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-jasper</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>jfree</groupId>
      <artifactId>jfreechart</artifactId>
      <version>1.0.13</version>
    </dependency>
    <dependency>
      <groupId>xml-apis</groupId>
      <artifactId>xml-apis</artifactId>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc8</artifactId>
      <version>${com.oracle.version}</version>
    </dependency>
    <dependency>
      <groupId>com.oracle.database.nls</groupId>
      <artifactId>orai18n</artifactId>
      <version>${com.oracle.version}</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>


  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <release>${java.version}</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>3.3.0.603</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
          <attachClasses>true</attachClasses>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <descriptors>
            <descriptor>src/dist/tar/assembly.xml</descriptor>
          </descriptors>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <configuration>
              <target>
                <mkdir dir="${explodeDir}" />
                <gunzip src="${project.build.directory}/${project.build.finalName}.tar.gz" />
                <untar src="${project.build.directory}/${project.build.finalName}.tar" dest="${explodeDir}" />
                <copy todir="${explodeDir}/${project.build.finalName}/conf" overwrite="true">
                  <fileset dir="src/dist/docker/conf" />
                </copy>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.1.4</version>
        <executions>
          <execution>
            <phase>deploy</phase>
            <id>build-gitlab</id>
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <allowInsecureRegistries>false</allowInsecureRegistries>
          <from>
            <image>${image.base}</image>
          </from>
          <to>
            <image>gitlab-registry.cern.ch/c2mon/${project.artifactId}</image>
            <tags>
              <tag>${project.version}</tag>
              <tag>latest</tag>
            </tags>
          </to>
          <container>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
            <ports>
              <port>8080</port>
            </ports>
            <volumes>
              <volume>/log</volume>
              <volume>/conf</volume>
            </volumes>
            <entrypoint>
              <entrypoint>/bin/c2mon-web-ui.sh</entrypoint>
              <entrypoint>run</entrypoint>
            </entrypoint>
          </container>
          <extraDirectories>
            <paths>
                <path>${explodeDir}/${project.build.finalName}/</path>
            </paths>
            <permissions>
              <permission>
                <file>/bin/c2mon-web-ui.sh</file>
                <mode>755</mode>
              </permission>
              <permission>
                <file>/bin/C2MON-WEB-UI.jvm</file>
                <mode>755</mode>
              </permission>
            </permissions>
          </extraDirectories>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>gitlab-ci</id>
      <activation>
         <property><name>env.CI</name><value>true</value></property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <configuration>
              <to>
                <auth>
                   <username>${env.CI_REGISTRY_USER}</username>
                   <password>${env.CI_REGISTRY_PASSWORD}</password>
                </auth>
              </to>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
